# socketio-chat

./: .gitignore  main.py  pyproject.toml  requirements.txt  server.py
app/spa/: spa_controller.py
modules/socketio/: __init__.py
ressources/views/: app.html.jinja
